--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@ Etant un véritable geek, depuis mon plus jeune âge, j’ai développé de soli
            <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box iconbox-pink">
               <div class="icon">
-                <img src="Akhrouf-sami-wassil/assets/img/conception.jpg.">
+                <img src="assets/img/conception.jpg.">
               </div>
               <br><br>
               <h5><a href="">Conception Web, langage HTML, analytics, search console ...</a></h5>
