--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ Etant un véritable geek, depuis mon plus jeune âge, j’ai développé de soli
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
              <div class="icon-box iconbox-orange ">
               <div class="icon">
-              	<img src="Akhrouf-sami-wassil/assets/img/manager.png.">
+              	<img src="assets/img/manager.png." rel="icon" >
                 
 
               
