--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ Etant un véritable geek, depuis mon plus jeune âge, j’ai développé de soli
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
              <div class="icon-box iconbox-orange ">
               <div class="icon">
-              	<img src="assets/img/manager.png." rel="icon" >
+              	<img src="assets/img/manager.png." >
                 
 
               
@@ -409,7 +409,7 @@ Etant un véritable geek, depuis mon plus jeune âge, j’ai développé de soli
            <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box iconbox-pink">
               <div class="icon">
-                <img src="assets/img/conception.jpg.">
+                <img src="assets/img/conception.png">
               </div>
               <br><br>
               <h5><a href="">Conception Web, langage HTML, analytics, search console ...</a></h5>
