--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
               <p><em>Né en Aout 1984, je suis marié sans enfants et dégagé du service national. je suis de nationalité algérienne et européenne. Je dispose également d'un véhicule prémium de moins de cin (5) ans.</em></p>
               <ul>
                 <li>Boudjemaa Temim - Draria (W. Alger)</li>
-                <li><a href="tel:#">0770 70 70 49</a>   	Plutôt simple à retenir, pensez Djezzy 49</li>
+                <li><a href="tel:0770707049">0770 70 70 49</a>   	Plutôt simple à retenir, pensez Djezzy 49</li>
 
-                <li><a href="tel:#">0661 51 22 01</a></li>
-                <li><a href="mailto:#">akhrouf.wassil@hotmail.fr</a></li>
+                <li><a href="tel:0661512201">0661 51 22 01</a></li>
+                <li><a href="mailto:akhrouf.wassil@hotmail.fr">akhrouf.wassil@hotmail.fr</a></li>
               </ul>
             </div>
 
@@ -528,13 +528,13 @@ Etant un véritable geek, depuis mon plus jeune âge, j’ai développé de soli
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p><a href="mailto:#">akhrouf.wassil@hotmail.fr</a></p>
+                <p><a href="mailto:akhrouf.wassil@hotmail.fr">akhrouf.wassil@hotmail.fr</a></p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Téléphone:</h4>
-                <p><a href="tel:#">0770 70 70 49</a></p><p><a href="tel:#">0661 51 22 01</a></p>
+                <p><a href="tel:0770707049">0770 70 70 49</a></p><p><a href="tel:0661512201">0661 51 22 01</a></p>
                 
               </div>
 
