--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
-              <i class="bi bi-emoji-smile"></i>
-              <i + </i> <span data-purecounter-start="0" data-purecounter-end="18" data-purecounter-duration="1" class="purecounter"></span>
+              <i class="bi bi-emoji-smile">+</i>
+              <span data-purecounter-start="0" data-purecounter-end="18" data-purecounter-duration="1" class="purecounter"></span>
               <p>Années d'expérience</p>
             </div>
           </div>
