--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
               <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="18" data-purecounter-duration="1" class="purecounter"><p>plus</p></span>
+              <span data-purecounter-start="0" data-purecounter-end="18" data-purecounter-duration="1" class="purecounter"></span>
               <p>Années d'expérience</p>
             </div>
           </div>
@@ -119,7 +119,7 @@
             <div class="count-box">
               <i class="bi bi-journal-richtext"></i>
               <span data-purecounter-start="0" data-purecounter-end="+130" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Suivis de projets</p>
+              <p>Suivis de projets, au minimum</p>
             </div>
           </div>
 
