--- a/index.html
+++ b/index.html
@@ -119,14 +119,14 @@
             <div class="count-box">
               <i class="bi bi-journal-richtext"></i>
               <span data-purecounter-start="0" data-purecounter-end="+130" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Suivis de projets, au minimum</p>
+              <p>Suivis de projets, <br> au minimum</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="bi bi-headset"></i>
-              <span data-purecounter-start="0" data-purecounter-end="+180" data-purecounter-duration="2" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="+180" data-purecounter-duration="1.5" class="purecounter"></span>
               <p>Expertise de projets</p>
             </div>
           </div>
