--- a/index.html
+++ b/index.html
@@ -111,31 +111,31 @@
             <div class="count-box">
               <i class="bi bi-emoji-smile"></i>
               <span data-purecounter-start="0" data-purecounter-end="18" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Années d'expérience</p>
+              <p>Années d'expérience<br> cumulées </p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
             <div class="count-box">
               <i class="bi bi-journal-richtext"></i>
-              <span data-purecounter-start="0" data-purecounter-end="+130" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Suivis de projets, <br> au minimum</p>
+              <span data-purecounter-start="0" data-purecounter-end="200" data-purecounter-duration="1" class="purecounter"></span>
+              <p>Suivis de projets <br> au minimum</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="bi bi-headset"></i>
-              <span data-purecounter-start="0" data-purecounter-end="+180" data-purecounter-duration="1.5" class="purecounter"></span>
-              <p>Expertise de projets</p>
+              <span data-purecounter-start="0" data-purecounter-end="+300" data-purecounter-duration="1.5" class="purecounter"></span>
+              <p>Expertise de projets <br> au minimum</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="bi bi-award"></i>
-              <span data-purecounter-start="0" data-purecounter-end="+2000" data-purecounter-duration="2" class="purecounter"></span>
-              <p>Heures de travail cumulées</p>
+              <span data-purecounter-start="0" data-purecounter-end="+12000" data-purecounter-duration="2" class="purecounter"></span>
+              <p>Heures de travail cumulées <br> (Probablement bien plus)</p>
             </div>
           </div>
 
