--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
         <div class="row">
           <div class="col-lg-6">
-            <h3 class="resume-title"> Qui est Wassil Samy ?</h3> <p href="assets/img/lettre.pdf" download="lettre.pdf">Télécharger ma lettre de motivation</p>
+            <h3 class="resume-title"> Qui est Wassil Samy ?</h3> <a href="assets/img/lettre.pdf" download="lettre.pdf">Télécharger ma lettre de motivation</a> <br>
             <div class="resume-item pb-0">
              
               <p><em>Né en Aout 1984, je suis marié sans enfants et dégagé du service national. je suis de nationalité algérienne et européenne. Je dispose également d'un véhicule prémium de moins de cin (5) ans.</em></p>
