--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ Catégorie RNCP Niveau 7 correspondant à un diplôme de niveau Master II ou Ing
               <p><em>Founder & CEO de MUST Communication Algérie </em></p>
               <ul>
                 <li>Pour les détails des missions, je vous invite à télécharger le CV au format PDF</li>
-                <li><a href="assets/img/CV.pdf" download="CV.pdf">Télécharger le Curriculum Vitae</a></li>      
+                <li><a href="CV.pdf" download="CV.pdf">Télécharger le Curriculum Vitae</a></li>      
               </ul>
             </div>
             <div class="resume-item">
