--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <h3 class="resume-title"> Qui est Wassil Samy ?</h3>  
             <div class="resume-item pb-0">
              
-              <p><em>Né en Aout 1984, je suis marié sans enfants et dégagé du service national. je suis de nationalité algérienne et européenne. Je dispose également d'un véhicule prémium de moins de cin (5) ans.</em></p>
+              <p><em>Né en Aout 1984, je suis marié sans enfants et dégagé du service national. je suis de nationalité algérienne et européenne. Je dispose également d'un véhicule prémium de moins de cinq (5) ans.</em></p>
               <ul>
                 <li>Boudjemaa Temim - Draria (W. Alger)</li>
                 <li><a href="tel:0770707049">0770 70 70 49</a>   	Plutôt simple à retenir, pensez Djezzy 49</li>
